# VIO-SLAM-course

./: .gitignore  README.md
exercise_task/chap_01_course_overview/: chap_01_course_overview.md
projects/01_update_rotation/: CMakeLists.txt  CmakeLists.txt  update_rotation.cpp
projects/02_vio_data_simulation/: CMakeLists.txt
projects/02_vio_data_simulation/main/: gener_alldata.cpp
projects/02_vio_data_simulation/src/: imu.h  param.cpp
